[package]
name = "irondash_dart_ffi"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust Bindings for Dart FFI API."
authors = ["SIDL CORPORATION <contact@sid-corporation.fr>"]
repository = "https://github.com/SIDL-C0R0RATI0N/irondash_plus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
